--- a/res/css/views/rooms/_RoomHeader.scss
+++ b/res/css/views/rooms/_RoomHeader.scss
@@ -35,7 +35,7 @@ limitations under the License.
     display: flex;
     align-items: center;
     min-width: 0;
-    padding: 0 10px 0 16px;
+    padding: 0 10px 0 18px;
 }
 
 .mx_RoomHeader_spinner {
